--- a/package.json
+++ b/package.json
@@ -16,12 +16,17 @@
     "@prisma/client": "^6.15.0",
     "@tailwindcss/postcss": "^4.1.13",
     "bcryptjs": "^3.0.2",
+    "framer-motion": "^12.23.12",
+    "lucide-react": "^0.543.0",
     "next": "15.5.2",
     "next-auth": "^4.24.11",
     "postcss": "^8.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-hook-form": "^7.62.0",
     "react-hot-toast": "^2.6.0",
+    "react-icons": "^5.5.0",
+    "styled-components": "^6.1.19",
     "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
