--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-hook-form": "^7.62.0",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
+    "sharp": "^0.34.4",
     "styled-components": "^6.1.19",
     "tailwindcss": "^4.1.13",
     "tesseract.js": "^6.0.1",
